# 42_pythonForDataScience

./: README.md
0_Starting/ex00/: Hello.py  doc
0_Starting/ex01/: format_ft_time.py
0_Starting/ex02/: doc  find_ft_type.py
0_Starting/ex03/: NULL_not_found.py
0_Starting/ex04/: whatis.py
0_Starting/ex05/: building.py
0_Starting/ex06/: filterstring.py  ft_filter.py  main.py
0_Starting/ex07/: sos.py  test
0_Starting/ex08/: Loading.py  tester.py  todo
0_Starting/ex09/: README.md  pyproject.toml  tester.py
0_Starting/ex09/src/ft_package/: __init__.py  joy_maker.py
0_Starting/ex09/src/ft_package-0.0.1/: .__init__.py.swp  __init__.py
1_Array/: TODO
1_Array/ex00/: give_bmi.py  tester.py
1_Array/ex01/: array2D.py  tester.py
1_Array/ex02/: load_image.py
1_Array/ex03/: load_image.py  zoom.py
1_Array/ex04/: load_image.py  rotate.py
1_Array/ex05/: load_image.py  pimp_image.py
2_DataTable/: TODO
2_DataTable/ex00/: load_csv.py  tester.py
2_DataTable/ex01/: aff_life.py  load_csv.py
2_DataTable/ex02/: aff_pop.py
2_DataTable/ex03/: projection_life.py
3_OOP/ex00/: S1E9.py  tester.py
3_OOP/ex01/: S1E7.py  S1E9.py  tester.py
3_OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
3_OOP/ex03/: ft_calculator.py  tester.py
3_OOP/ex04/: ft_calculator.py  tester.py
4_Dod/ex00/: statistics.py
4_Dod/ex01/: in_out.py
4_Dod/ex02/: callLimit.py
4_Dod/ex03/: new_student.py
